--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "@rollup/plugin-babel": "^5.0.2",
+    "hypernova": "^2.5.0",
+    "rollup": "^2.11.2",
+    "rollup-plugin-terser": "^6.1.0",
     "svelte": "^3.23.0",
     "svelte-loader": "^2.13.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-multi-entry": "^3.0.1",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "rollup-plugin-postcss": "^3.1.1",
+    "rollup-plugin-svelte": "^5.2.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
