--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "@rollup/plugin-babel": "^5.0.2",
     "hypernova": "^2.5.0",
+    "hypernova-svelte": "^1.2.0",
     "svelte": "^3.23.0",
     "svelte-loader": "^2.13.6",
     "turbolinks": "^5.2.0"
@@ -20,7 +21,6 @@
     "@rollup/plugin-replace": "^2.3.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "rollup": "^2.11.2",
-    "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-svelte": "^5.2.2",
     "webpack-dev-server": "^3.11.0"
   }
